# git-ai

./: Cargo.toml  Taskfile.yml  flake.nix  install.ps1  install.sh
.github/workflows/: coverage.yml  e2e-tests.yml  git-core-compat.yml  github-integration-tests.yml  install-scripts-local.yml  intellij-build.yml  lint-format.yml  nightly-agent-integration.yml  performance-benchmarks.yml  release-vscode-extension.yml  release.yml  test.yml
agent-support/intellij/: build.gradle.kts
agent-support/intellij/gradle/: libs.versions.toml
agent-support/opencode/: git-ai.ts  package-lock.json  package.json
agent-support/vscode/: package-lock.json  package.json
docs/: telemetry-examples.md
scripts/: ai  create_test_vsc_db.py
scripts/nightly/: test-live-agent.sh  verify-hook-wiring.sh
src/: checkpoint_content_budget.rs  config.rs  daemon.rs  diagnostics.rs  error.rs  lib.rs  process_timeout.rs  sqlite.rs  utils.rs
src/api/: metrics.rs  mod.rs
src/authorship/: attribution_recovery.rs  background_agent.rs  imara_diff_utils.rs  internal_db.rs  mod.rs  post_commit.rs  range_authorship.rs  rewrite.rs  rewrite_cherry_pick.rs  rewrite_stash.rs  virtual_attribution.rs
src/commands/: activity.rs  await.rs  config.rs  daemon.rs  debug.rs  flush_metrics_db.rs  git_ai_handlers.rs  git_hook_handlers.rs  install_hooks.rs  mod.rs  notes_migrate.rs  pre_exit.rs  usage.rs  whoami.rs
src/commands/analyze/: sessions.rs
src/daemon/: bash_history_db.rs  checkpoint.rs  control_api.rs  git_backend.rs  ref_cursor.rs  stream_worker.rs  sweep_coordinator.rs  telemetry_worker.rs  test_sync.rs  trace_normalizer.rs  transcript_redaction.rs  transcript_worker.rs
src/git/: repo_storage.rs  repository.rs
src/metrics/: attrs.rs  db.rs  events.rs  local_stats.rs
src/notes/: db.rs
src/observability/: mod.rs
src/streams/: db.rs  model_extraction.rs  watermark.rs
src/transcripts/: agent.rs
tests/: async_mode.rs  commit_tree_update_ref.rs  daemon_mode.rs  windows_install_script.rs
tests/integration/: agent_v1.rs  checkpoint_size.rs  checkpoint_unit.rs  cherry_pick.rs  ci_squash_rebase.rs  commit_metric_metadata.rs  config_cli_coverage.rs  cursor.rs  daemon_commit_carryover.rs  git_alias_resolution.rs  github_copilot_tools.rs  graphite.rs  internal_spawn_safety.rs  main.rs  metrics_retry_idle.rs  opencode.rs  post_commit_unit.rs  pull_rebase_ff.rs  repo_storage_unit.rs  rewrite_ops_attribution.rs  sessions_cutover.rs  simple_additions.rs  sqlite_connection_policy.rs  stash_attribution.rs  stats_unit.rs  tls_native_certs.rs
(+40 files in other folders)
