[package]
name = "git-ai"
version = "1.6.13"
edition = "2024"
default-run = "git-ai"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_canonicalizer = "0.3"
sha2 = "0.10"
imara-diff = "0.2"
chrono = { version = "0.4.44", default-features = false, features = ["serde", "clock", "std"] }
indicatif = "0.18"
futures = "0.3"
tokio = { version = "1.52", features = ["rt-multi-thread", "sync", "time", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
interprocess = "2.4"
rusqlite = { version = "0.31", features = ["bundled"] }
libc = "0.2"
jsonc-parser = { version = "0.32", features = ["cst"] }
dirs = "5.0"
ureq = { version = "2.12", default-features = false, features = ["native-tls"] }
native-tls = "0.2"
url = "2.5"
glob = "0.3"
ignore = "0.4"
ratatui = "0.30"
zip = { version = "8.6", default-features = false, features = ["deflate"] }
flate2 = "1.1"
crossterm = "0.29"
keyring = { version = "3", features = ["sync-secret-service", "apple-native", "windows-native"], optional = true }
once_cell = "1.21"
gix-config = "0.53.0"
gix-index = "0.48.0"
rand = "0.10"
regex = "1.12"
toml = "0.9"
unicode-normalization = "0.1"
tempfile = { version = "3.27", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(windows)'.dependencies]
named_pipe = "0.4.1"
winreg = "0.55"

[features]
test-support = ["dep:tempfile"]
keyring = ["dep:keyring"]

[dev-dependencies]
git-ai = { path = ".", features = ["test-support"] }
tempfile = "3.27"
insta = "1.47"
regex = "1.12"
filetime = "0.2"
serial_test = "3.4"
rstest = "0.26"
paste = "1.0"
mockito = "1.6"
criterion = { version = "0.5", features = ["html_reports"] }

[target.'cfg(windows)'.dev-dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_JobObjects", "Win32_System_Threading"] }

[profile.dev]
debug = 1                          # Line tables only -- smaller binaries, faster linking
split-debuginfo = "unpacked"       # macOS: dramatically faster linking

[profile.test]
debug = 1
split-debuginfo = "unpacked"

[profile.dev.build-override]
opt-level = 2                      # Optimize proc macros and build scripts

[[test]]
name = "integration"
path = "tests/integration/main.rs"
harness = true

[[bench]]
name = "notes_io"
harness = false
